Implemented session signin logic and added sessions to user doc and response
